Fixed form layout bug on mobile

--- a/src/app/components/players/players.component.css
+++ b/src/app/components/players/players.component.css
@@ -24,6 +24,11 @@
     left: 0;
     right: 0;
     padding: 0 20px;
+    padding-top: 20px;
     bottom: 20px;
+  }
+
+  .form-open {
+    background-color: #f2f2f2;
   }
 }
