--- a/src/styles.css
+++ b/src/styles.css
@@ -111,3 +111,9 @@ h4 {
     margin-top: 8vh;
   }
 }
+
+@media only screen and (max-width: 500px) {
+  .item-container {
+    gap: 0.2rem;
+  }
+}
